Fixed Bugs where the repo table overlaps the fixed navbar

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -52,6 +52,7 @@ p {
 }
 
 .active {
+  
   color: $primaryPink !important;
 }
 
@@ -63,6 +64,7 @@ p {
   }
 }
 .sticky {
+  z-index: 100;
   position: fixed;
   top: 0;
   width: 100%;
@@ -133,72 +135,6 @@ p {
     text-align: center;
   }
 }
-
-// #wrap-scroll {
-//   position: relative;
-//   max-height: 200px;
-//   width: 100%;
-//   max-width: 100%;
-//   margin: auto;
-//   /* background: #eee; */
-//   overflow: auto;
-//   padding-right: 20px;
-//   mask: url(#masking);
-//   &::-webkit-scrollbar {
-//     width: 0px; /* Remove scrollbar space */
-//     background: transparent; /* Optional: just make scrollbar invisible */
-//   }
-//   -webkit-mask-image: -webkit-gradient(
-//     linear,
-//     left bottom,
-//     left top,
-//     color-stop(0.5, black),
-//     color-stop(1, transparent)
-//   );
-// }
-
-// #wrap-scroll ul {
-//   list-style: none;
-//   position: relative;
-//   transition: transform 0.3s;
-//   top: 50px;
-// }
-
-// #wrap-scroll ul,
-// #wrap-scroll ul li {
-//   margin: 0;
-//   padding: 0;
-//   text-align: center;
-// }
-
-// #wrap-scroll ul li {
-//   height: 50px;
-//   line-height: 50px;
-//   transition: transform 0.3s;
-//   overflow: hidden;
-// }
-
-// #wrap-scroll ul li:last-of-type {
-//   padding-bottom: 50px;
-// }
-
-// #wrap-scroll ul li.active .item {
-//   transform: scale(1.9);
-// }
-
-// #wrap-scroll ul li .item {
-//   position: relative;
-//   transition: transform 200ms;
-//   display: inline-block;
-// }
-
-// .scroll-item {
-//   font-size: 25px;
-//   color: $primaryBlue;
-//   &:hover {
-//     transform: scale(1.2);
-//   }
-// }
 
 // Contact CSS
 .contact {
